# key-value-store

./: .dockerignore  Dockerfile  README.md
backend/: Cargo.toml  file_store.csv
backend/api/: Cargo.toml
backend/api/src/: health_check.rs  http_response.rs  in_memory.rs  lib.rs  postgres.rs  users.rs
backend/common/: Cargo.toml
backend/common/src/: crypt.rs  lib.rs
backend/migrations/: 20230817153815_create_store_table.down.sql  20230817153815_create_store_table.up.sql  20230825133549_create_users_table.up.sql
backend/src/: main.rs
backend/store/: Cargo.toml
backend/store/.sqlx/: query-16448a20b432fe8c91a3a129fd7b896ea65f59bda0941b1df34dcaf35586552c.json  query-40823e22cb1a19f814ed7504b7dabfe54584dec30ae7ea0f66452117e06bc7fa.json  query-91ab8f9a3e0ab226d613ef10daeaf7b6e722b66e82e284046068c04ac65a93dc.json  query-aadce607e9781fd5de0d32527629b5923d04e3f8e44d1f25c0509d5df66eb0a7.json
backend/store/src/: file.rs  in_memory.rs  lib.rs  postgres.rs  redis.rs
frontend/: package-lock.json  package.json
frontend/src/: app.postcss
frontend/src/lib/: client.ts  response.ts  store.ts
frontend/src/lib/components/: Box.svelte  Card.svelte  Navbar.svelte
frontend/src/lib/layout/: AddData.svelte  DisplayData.svelte
frontend/src/routes/: +page.svelte
