[package]
name = "key-value-store"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"./store",
	"./common"
]

[dependencies]
common.workspace = true
store.workspace = true

anyhow.workspace = true
csv.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true

dotenvy = "^0.15.7"
tracing-subscriber = "0.3"

[workspace.dependencies]
common = { path = "./common" }
store = { path = "./store" }

anyhow.version = "^1.0.75"
csv = "1.2.2"
sqlx = { version = "^0.7", features = ["postgres", "runtime-tokio"] }
tokio = { version = "^1", features = ["full", "tracing"] }
tracing = "0.1"