[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
store.workspace = true

anyhow.workspace = true
axum.workspace = true
redis.workspace = true
serde.workspace = true
sqlx.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true